[gd_scene load_steps=4 format=3 uid="uid://20ilyen6pwa7"]

[ext_resource type="Script" path="res://trap_floor.gd" id="1_g2vgs"]
[ext_resource type="Texture2D" uid="uid://beq23gbn31g3r" path="res://icon.svg" id="2_8i2c7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yh7c6"]
size = Vector2(16, 16)

[node name="trapFloor" type="Area2D"]
z_index = 1
collision_mask = 3
script = ExtResource("1_g2vgs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 9.53674e-07)
scale = Vector2(0.123047, 0.126953)
texture = ExtResource("2_8i2c7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yh7c6")

[node name="CoolDown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CoolDown" to="." method="_on_cool_down_timeout"]
